added dynamic view template for controller

--- a/src/main/resources/view/index.html
+++ b/src/main/resources/view/index.html
@@ -28,6 +28,14 @@
             box-sizing: border-box;
         }
 
+        .hero {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 60vh;
+        }
+
         .main-heading {
             font-size: 3rem;
             font-weight: 800;
@@ -150,9 +158,11 @@
 </head>
 <body>
 <div class="container">
-    <h1 class="main-heading">wb2c0NET</h1>
-    <p class="tagline">A modern, lightweight, and efficient Java MVC web framework for building robust and scalable web applications.</p>
-    <a href="#" class="cta-button">Get Started</a>
+   <div class="hero">
+       <h1 class="main-heading">Shock</h1>
+       <p class="tagline">A modern, lightweight, and efficient Java MVC web framework for building robust and scalable web applications.</p>
+       <a href="#" class="cta-button">Get Started</a>
+   </div>
 
     <div class="features">
         <h2 class="features-heading">Key Features</h2>
