--- a/src/main/resources/view/template/template.html
+++ b/src/main/resources/view/template/template.html
@@ -92,7 +92,7 @@
 </main>
 
 <footer>
-    <p>&copy; <?php echo date("Y"); ?> Shock Framework. All rights reserved.</p>
+    <p>&copy; {{year}} Shock Framework. All rights reserved.</p>
 </footer>
 </body>
 </html>
