added middleware validation

--- a/src/main/resources/view/form.html
+++ b/src/main/resources/view/form.html
@@ -1,4 +1,4 @@
-<div style="background-image: linear-gradient(to bottom, #1a202c, #12171f); color: #f7fafc; padding: 2rem; border-radius: 0.75rem; border: 1px solid rgba(255, 255, 255, 0.1); max-width: 90%; margin: 2rem auto;">
+<div style="background-image: linear-gradient(to bottom, #1a202c, #12171f); color: #f7fafc; padding: 2rem; border-radius: 0.75rem; border: 1px solid rgba(255, 255, 255, 0.1); width: 25vw; margin: 2rem auto;">
     <form action="/user" method="post" style="display: flex; flex-direction: column; gap: 1.5rem;">
         <div style="display: flex; flex-direction: column;">
             <label for="name" style="margin-bottom: 0.5rem; font-weight: 600;">Name:</label>
