added todo view and add

--- a/src/main/resources/view/index.html
+++ b/src/main/resources/view/index.html
@@ -161,7 +161,7 @@
    <div class="hero">
        <h1 class="main-heading">Shock</h1>
        <p class="tagline">A modern, lightweight, and efficient Java MVC web framework for building robust and scalable web applications.</p>
-       <a href="#" class="cta-button">Get Started</a>
+       <a href="/todo" class="cta-button">Sample App</a>
    </div>
 
     <div class="features">
