fixed router and landing page

--- a/src/main/resources/view/index.html
+++ b/src/main/resources/view/index.html
@@ -114,8 +114,9 @@
         }
 
         .feature-item {
+            text-align: center;
             margin-bottom: 0;
-            font-size: 1.1rem;
+            font-size: 1rem;
             line-height: 1.9;
             background-color: rgba(255, 255, 255, 0.04);
             padding: 1.5rem;
@@ -130,6 +131,10 @@
             transform: translateY(-4px);
             box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
         }
+
+         .feature-item p {
+             font-size: .8rem;
+         }
 
         .feature-item strong {
             color: #f56565;
@@ -168,22 +173,28 @@
         <h2 class="features-heading">Key Features</h2>
         <ul class="feature-list">
             <li class="feature-item">
-                <strong>Modern Architecture:</strong> Built with a focus on modern design principles and best practices.
+                <strong>Modern Architecture</strong>
+                <p>Built with a focus on modern design principles and best practices.</p>
             </li>
             <li class="feature-item">
-                <strong>Lightweight & Fast:</strong> Minimal overhead and optimized for high performance.
+                <strong>Lightweight & Fast</strong>
+                <p>Minimal overhead and optimized for high performance.</p>
             </li>
             <li class="feature-item">
-                <strong>MVC Pattern:</strong> Clean and organized code with a strong separation of concerns.
+                <strong>MVC Pattern</strong>
+                <p>Clean and organized code with a strong separation of concerns.</p>
             </li>
             <li class="feature-item">
-                <strong>Dynamic Routing:</strong> Flexible and intuitive routing system for easy URL mapping.
+                <strong>Dynamic Routing</strong>
+                <p>Flexible and intuitive routing system for easy URL mapping.</p>
             </li>
             <li class="feature-item">
-                <strong>Customizable Error Handling:</strong>  Create elegant and informative error pages.
+                <strong>Customizable Error Handling</strong>
+                <p>Create elegant and informative error pages.</p>
             </li>
             <li class="feature-item">
-                <strong>Scalable:</strong> Designed to handle growing traffic and complexity.
+                <strong>Scalable</strong>
+                <p>Designed to handle growing traffic and complexity.</p>
             </li>
         </ul>
     </div>
