--- a/src/main/resources/view/login.html
+++ b/src/main/resources/view/login.html
@@ -1,17 +1,19 @@
 <div style="background-image: linear-gradient(to bottom, #1a202c, #12171f); color: #f7fafc; padding: 2rem; border-radius: 0.75rem; border: 1px solid rgba(255, 255, 255, 0.1); width: 25vw; margin: 2rem auto;">
-    <form action="/user" method="post" style="display: flex; flex-direction: column; gap: 1.5rem;">
+    <h3 style="text-align: center;">User Login</h3>
+
+    {%if hasError %}
+    <p style="text-align: center; color: red;">{{ error }}</p>
+    {% endif %}
+
+    <form action="/login" method="post" style="display: flex; flex-direction: column; gap: 1.5rem;">
         <div style="display: flex; flex-direction: column;">
-            <label for="name" style="margin-bottom: 0.5rem; font-weight: 600;">Name:</label>
-            <input value="John Doe" type="text" id="name" name="name" style="padding: 0.75rem; border-radius: 0.375rem; border: 1px solid #e2e8f0; background-color: #edf2f7; color: #1a202c;">
+            <label for="email" style="margin-bottom: 0.5rem; font-weight: 600;">Email</label>
+            <input type="email" placeholder="Enter email" id="email" name="email" style="padding: 0.75rem; border-radius: 0.375rem; border: 1px solid #e2e8f0; background-color: #edf2f7; color: #1a202c;">
         </div>
         <div style="display: flex; flex-direction: column;">
-            <label for="email" style="margin-bottom: 0.5rem; font-weight: 600;">Email:</label>
-            <input value="john@gmail.com" type="email" id="email" name="email" style="padding: 0.75rem; border-radius: 0.375rem; border: 1px solid #e2e8f0; background-color: #edf2f7; color: #1a202c;">
+            <label for="password" style="margin-bottom: 0.5rem; font-weight: 600;">Password</label>
+            <input type="password" placeholder="Enter password" id="password" name="password" style="padding: 0.75rem; border-radius: 0.375rem; border: 1px solid #e2e8f0; background-color: #edf2f7; color: #1a202c;">
         </div>
-        <div style="display: flex; flex-direction: column;">
-            <label for="message" style="margin-bottom: 0.5rem; font-weight: 600;">Message:</label>
-            <textarea id="message" name="message" style="padding: 0.75rem; border-radius: 0.375rem; border: 1px solid #e2e8f0; background-color: #edf2f7; color: #1a202c;"></textarea>
-        </div>
-        <button type="submit" style="padding: 0.75rem 1.5rem; background-color: #f56565; color: #fff; font-weight: 600; border-radius: 0.375rem; cursor: pointer; transition: background-color 0.2s ease; font-size: 1.125rem; border: none;">Submit</button>
+        <button type="submit" style="padding: 0.75rem 1.5rem; background-color: #f56565; color: #fff; font-weight: 600; border-radius: 0.375rem; cursor: pointer; transition: background-color 0.2s ease; font-size: 1.125rem; border: none;">Login</button>
     </form>
 </div>
