moved stack tracing to error class

--- a/src/main/resources/view/login.html
+++ b/src/main/resources/view/login.html
@@ -1,6 +1,7 @@
 <div style="background-image: linear-gradient(to bottom, #1a202c, #12171f); color: #f7fafc; padding: 2rem; border-radius: 0.75rem; border: 1px solid rgba(255, 255, 255, 0.1); width: 25vw; margin: 2rem auto;">
     <h3 style="text-align: center;">User Login</h3>
 
+<!--  Sample IF statement  -->
     {%if error %}
     <p style="text-align: center; color: red;">{{ error }}</p>
     {% endif %}
